*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.18 ===
* Implemented automatic scale of spectrum graph switch.
* Aligned the height of the blocks in "cgroup".
* Implemented split frequency display.
* Updated build scripts and dependencies.

=== 1.0.17 ===
* Reduced CPU consumption for Linear Phase and Modern modes.
* Reduced the rate of the gain curve update.
* Updated build scripts and dependencies.

=== 1.0.16 ===
* Implemented SIMD-optimized curve and gain processing.
* Updated build scripts and dependencies.

=== 1.0.15 ===
* Updated build scripts and dependencies.

=== 1.0.14 ===
* Implemented L/R split mode for stereo versions of compressor.
* Implemented Linear Phase operating mode.
* Updated build scripts and dependencies.

=== 1.0.13 ===
* Fixed improper behaviour of the bypass switch.
* Updated build scripts and dependencies.

=== 1.0.12 ===
* Updated build scripts and dependencies.

=== 1.0.11 ===
* Updated build scripts and dependencies.

=== 1.0.10 ===
* Updated build scripts and dependencies.

=== 1.0.9 ===
* Updated build scripts and dependencies.

=== 1.0.8 ===
* Updated build scripts and dependencies.

=== 1.0.7 ===
* Added 'Min' and 'Max' sidechain sources for the multiband compressor.
* Updated build scripts and dependencies.

=== 1.0.6 ===
* Added negative boosting gain option in 'Boosting' mode.
* Assigned more correct names for sidechain types.
* Updated build scripts and dependencies.

=== 1.0.5 ===
* Added german translations (contributed by Johannes Guenther).
* Updated build scripts and dependencies.
* Small UI fixes related to output level meter.

=== 1.0.4 ===
* Fixed invalid phase compensation issue of the dry signal for 'Modern' mode.
* Added all-pass phase compensation for the dry signal for the 'Classic' mode.
* Updated dependencies and build scripts.
* Updated build scripts and dependencies.
