@@ -629,7 +629,7 @@
 									<dot x.id="elm_${i}" y.id="clm_${i}" color="graph_mesh" bcolor="graph_mesh"/>
 
 									<!-- Markers -->
-									<marker id="al_${i}" color="attack_1"/>
+									<marker id="al_${i}"  editable="true" width="2" pointer="hsize" color="attack_1" hcolor="attack_1"/>
 									<marker id="rl_${i}" color="release_1"/>
 
 									<!-- Text -->
